--- a/PubDBApplication/PubDBApplication/PubDBApplication.csproj
+++ b/PubDBApplication/PubDBApplication/PubDBApplication.csproj
@@ -152,8 +152,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shared\Logger.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\PubDB.mdf" />
+    <Content Include="App_Data\PubDB_log.ldf">
+      <DependentUpon>PubDB.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -194,7 +199,6 @@
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
