--- a/PubDBApplication/PubDBApplication/PubDBApplication.csproj
+++ b/PubDBApplication/PubDBApplication/PubDBApplication.csproj
@@ -323,6 +323,7 @@
     <Content Include="Views\OrdersViews\Details.cshtml" />
     <Content Include="Views\OrdersViews\Edit.cshtml" />
     <Content Include="Views\OrdersViews\Index.cshtml" />
+    <Content Include="Views\OrdersViews\Submit.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
